# vcsi-interface

./: README.md  main.spec  pyproject.toml
src/: main.py  vcsi_wrapper.py
